SW-WR crashes if you enable some of the gfx.webrender.debug prefs
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
People
(Reporter: mayankleoboy1, Assigned: lsalzman)
References
(Blocks 1 open bug)
Details
Crash Data
Attachments
(3 files)
STR1
- Enable sw-wr
- Open a couple of tabs
- set gfx.webrender.debug.obscure-images to true
4 Switch tabs, or scroll a long page
AR: Crash
STR2:
- Enable sw-wr
1.5Open about:config - set gfx.webrender.debug.primitives to true
- Toggle it back to false
AR: Crash
STR3 :
- Enable sw-wr
- Open a couple of tabs
- set gfx.webrender.debug.capture-profiler to true
4 Switch tabs, or scroll a long page
STR4:
- Enable sw-wr
1.5Open about:config - set gfx.webrender.debug.picture-caching to true
- Toggle it back to false
| Reporter | ||
Comment 1•4 years ago
|
||
for gfx.webrender.debug.obscure-images : https://crash-stats.mozilla.org/report/index/d40d6c08-8bf0-4a60-a167-a01f60210224
for the other pref, https://crash-stats.mozilla.org/report/index/c00d0d83-5912-4f50-b7fa-ba3420210224
| Reporter | ||
Updated•4 years ago
|
| Reporter | ||
Comment 2•4 years ago
|
||
Updated•4 years ago
|
Comment 3•4 years ago
|
||
On Linux SW-WR, some of these features are clearly broken, but none of the STR in comment 0 cause a crash.
Updated•4 years ago
|
| Assignee | ||
Comment 4•4 years ago
|
||
There are some theoretical cases where the FB state might get a bit tortured
and we might encounter some invalid FB state while drawing. This adds some
extra validation just to be safe.
Updated•4 years ago
|
Comment 6•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Comment 7•4 years ago
|
||
Hello! Managed to reproduce all crashes by following comment 0 str with Firefox 88.0a1 (2021-02-24) on mac M1 mini 11.2.3. The only thing that I did differently was restarting Firefox after setting sw-wr to true and following the next steps.
Unfortunately with Firefox 88.0b8 (20210406185740) on the same machine, I can still reproduce the crashes following STR 2,3,4 from comment 0. STR1 doesn't crash for me but while having gfx.webrender.debug.obscure-images:true and sw-wr displays some weird glitches on the browser and webpages. I don't know if this is expected tho.
Should we reopen this bug?
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 8•4 years ago
|
||
When toggling debug state, we can sometimes queue debug renders, without
any debug overlay to send them to. This patch ensures we don't actually
draw anything in the debug renderer when there is no debug overlay.
Updated•4 years ago
|
Comment 10•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Updated•4 years ago
|
Comment 11•4 years ago
|
||
Verified fixed with Firefox 89.0a1 (20210411210108) on Windows 10x64, macOS 11.2.3M1 mini and Ubuntu 20.04. No crashes occur when following the STR from comment 0. Removing the qe+ flag.
Updated•4 years ago
|
Description
•