Bug 1694721 - Check for valid FB before drawing in SWGL. r=jrmuizel

There are some theoretical cases where the FB state might get a bit tortured
and we might encounter some invalid FB state while drawing. This adds some
extra validation just to be safe.

Differential Revision: https://phabricator.services.mozilla.com/D108988